begin quickpay implementation

--- a/.env.example
+++ b/.env.example
@@ -67,6 +67,14 @@ PAYPAL_SIGNATURE=
 STRIPE_SECRET_KEY=
 STRIPE_PUBLIC_KEY=
 
+## Quickpay
+# https://learn.quickpay.net/tech-talk/api/
+
+QUICKPAY_API_KEY=
+QUICKPAY_MERCHANT_ID=
+QUICKPAY_AGREEMENT_ID=
+QUICKPAY_PRIVATE_KEY=
+
 ## Steam (optional)
 # https://steamcommunity.com/dev/apikey
 
