--- a/src/composer.json
+++ b/src/composer.json
@@ -49,7 +49,8 @@
         "propaganistas/laravel-phone": "4.3.8",
         "symfony/mailgun-mailer": "6.1.0",
         "symfony/http-client": "6.1.6",
-        "spatie/backtrace": "1.2.1"
+        "spatie/backtrace": "1.2.1",
+        "nobrainerweb/omnipay-quickpay": "^3.1"
     },
     "require-dev": {
         "fakerphp/faker": "1.20.0",
