#240 replace morris with chart.js and add charts

--- a/src/package.json
+++ b/src/package.json
@@ -24,6 +24,7 @@
         "jquery-ui-dist": "1.13.2",
         "@popperjs/core": "2.11.8",
         "summernote": "0.8.20",
-        "slick-carousel": "1.8.1"
+        "slick-carousel": "1.8.1",
+        "chart.js": "4.4.0"
     }
 }
